syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_outer_classname = "HelloWorldProto";
option java_package = "io.grpc.examples.helloworld";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  bytes audio_data = 1;
  string target_language = 2;
}

message HelloReply {
  string korean = 1;
  string target_text = 2;
}